--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,4 @@ WORKDIR /backend
 COPY . .
 RUN bundle install
 EXPOSE 3000
-CMD ["rails", "server", "-e", "production", "-b", "0.0.0.0"]
+CMD ["rails", "server", "-e", "production", "-p", "3000", "-h"]
